--- a/Catt0022-credentials.yml
+++ b/Catt0022-credentials.yml
@@ -1,3 +1,3 @@
 creds:
-    token : <YOUR_TOKEN>
-    username : <YOUR_USERNAME/YOUR_REPO>
+    token : <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>
+    username : <MattCatton/devops1>
